--- a/index.html
+++ b/index.html
@@ -7,105 +7,60 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-/* Global */
-* { box-sizing:border-box; }
-html, body { height:100%; margin:0; }
-body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#000; user-select:none; position:relative; }
-#overlay, #hotspot-panel, #video-link-panel, #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay, #vr-button, #top-qr-button { user-select:none; }
+html, body { height:100%; margin:0; font-family:'Saira',sans-serif; background:#000; overflow:hidden; }
+* { box-sizing:border-box; user-select:none; }
 
-/* Panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-/* License bar */
+/* LICENSE BAR */
 #license-bar {
-  position: fixed;
-  bottom:12px;
-  left:50%;
-  transform:translateX(-50%);
-  max-width:92%;
-  background: rgba(0,0,0,0.18);
-  backdrop-filter: blur(10px);
-  color:#fff;
-  padding:10px 18px;
-  font-size:13px;
-  z-index:12;
-  overflow-y:auto;
-  text-align:center;
-  white-space:pre-wrap;
-  border-radius:12px;
+  position:fixed; bottom:12px; left:50%; transform:translateX(-50%);
+  max-width:92%; background:rgba(0,0,0,0.18); backdrop-filter:blur(10px);
+  color:#fff; padding:10px 18px; font-size:13px; z-index:12;
+  overflow-y:auto; text-align:center; white-space:pre-wrap; border-radius:12px;
 }
 
-/* Intro overlay */
+/* INTRO OVERLAY */
 #overlay {
-  position:fixed;
-  inset:0;
-  background: rgba(0,0,0,0.4);
-  display:flex; align-items:center; justify-content:center;
-  z-index:40;
+  position:fixed; inset:0; background:rgba(0,0,0,0.4);
+  display:flex; align-items:center; justify-content:center; z-index:40;
 }
 #overlay[aria-hidden="true"] { display:none; }
 
 #overlay-content {
-  width:40vw;                /* narrower */
-  height:60vw;               /* 3:2 ratio */
-  max-width:90vw; max-height:90vh;
-  background: rgba(255,255,255,0.18);
-  backdrop-filter: blur(10px);
-  padding:28px;
-  border-radius:18px;
-  color:#fff;
-  text-align:center;
-  display:flex; flex-direction:column;
-  justify-content:space-between;
-  align-items:center;
+  width:30vw; height:45vh; background:rgba(255,255,255,0.18);
+  backdrop-filter:blur(10px); border-radius:18px; color:#fff;
+  display:flex; flex-direction:column; justify-content:space-between;
+  text-align:center; padding:18px;
 }
 
-#overlay-content p { margin:0 0 10px 0; color:#fff; }
+#overlay-content p, #overlay-content .instructions-list p {
+  margin:6px 0; text-align:center;
+}
 
-/* Instructions */
 #instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:6px 0; }
+.instructions-list { margin-top:8px; line-height:1.5em; color:#fff; }
+.instructions-list p::before { content:'• '; }
 
-/* Dismiss message */
-#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+#dismiss-message { font-size:0.95rem; color:#d0d0d0; margin-top:12px; }
 
-/* Tooltip preview */
-#tooltip-preview {
-  display:none;
-  position:fixed;
-  width:280px;
-  background: rgba(0,0,0,0.9);
-  color:#fff;
-  text-align:center;
-  padding:10px;
-  border-radius:10px;
-  z-index:9999;
-  pointer-events:auto;
-  font-size:0.85rem;
-  line-height:1.2;
-  box-shadow:0 6px 18px rgba(0,0,0,0.6);
+/* HOTSPOT PANEL */
+#hotspot-panel {
+  position:fixed; top:12px; left:50%; transform:translateX(-50%);
+  background:rgba(0,0,0,0.2); backdrop-filter:blur(10px);
+  padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem;
+  text-align:center; max-width:82%; z-index:20;
 }
 
-/* Hotspot & Video panels */
-#hotspot-panel, #video-link-panel {
-  position:fixed;
-  left:50%;
-  transform:translateX(-50%);
-  background: rgba(0,0,0,0.20);
-  backdrop-filter: blur(10px);
-  padding:12px 18px;
-  border-radius:14px;
-  color:#fff;
-  font-size:0.98rem;
-  text-align:center;
-  z-index:20;
-  display:none;
+/* 360 VIDEO LINK PANEL */
+#video-link-panel {
+  position:fixed; top:80px; left:50%; transform:translateX(-50%);
+  background:rgba(0,0,0,0.2); backdrop-filter:blur(10px);
+  padding:10px 14px; border-radius:12px; color:#fff;
+  font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer;
 }
-#hotspot-panel { top:18px; }
-#video-link-panel { top: calc(18px + 72px + 12px); cursor:pointer; }
 
-/* 360 video overlay */
+/* YOUTUBE MODAL */
 #youtube-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
@@ -118,7 +73,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#00
 }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
-/* QR overlay */
+/* QR OVERLAY */
 #qr-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
@@ -127,87 +82,77 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#00
   background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
   border-radius:16px; padding:16px;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
-  max-width:20vw;
 }
-#qr-content img { max-width:100%; height:auto; object-fit:contain; border-radius:8px; }
+#qr-content img { width:15vh; height:15vh; object-fit:contain; border-radius:8px; }
 #qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
 
-/* QR and VR buttons */
+/* QR and VR BUTTONS */
 #top-qr-button, #vr-button {
   position:fixed; right:12px; padding:8px 12px; border-radius:12px;
   background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
-  color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem;
+  color:#fff; z-index:80; cursor:pointer; font-size:0.95rem;
 }
-#top-qr-button { top:12px; }
-#vr-button { top:64px; display:none; }
+#top-qr-button { top:12px; } #vr-button { top:64px; display:none; }
 
-/* Responsive */
-@media (max-width:900px) {
-  #overlay-content { width:60vw; height:90vw; font-size:0.98rem; }
-  #qr-content { max-width:40vw; }
+/* LINKTREE TOOLTIP */
+#tooltip-preview {
+  display:none; position:fixed; background: rgba(0,0,0,0.9);
+  color:#fff; text-align:center; padding:10px; border-radius:10px;
+  z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2;
+  box-shadow:0 6px 18px rgba(0,0,0,0.6);
 }
-@media (max-width:480px) {
-  #overlay-content { width:80vw; height:120vw; font-size:0.95rem; }
-  #qr-content { max-width:60vw; }
-  #hotspot-panel { font-size:0.9rem; padding:10px; }
-  #video-link-panel { font-size:0.95rem; }
-}
+#tooltip-preview img { width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px; }
+#tooltip-preview p { font-size:0.9rem; color:#fff; margin:0; }
+
 </style>
 </head>
 <body>
 
-<!-- Panorama -->
 <div id="panorama"></div>
 
 <!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
-  <div id="overlay-content" role="document">
+  <div id="overlay-content">
     <div>
       <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
       <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
-
       <div style="height:12px;"></div>
-
       <div id="instructions-line">Instructions</div>
-      <div id="instructions-list">
-        <p>• Click and drag to look around.</p>
-        <p>• Scroll to zoom in/out.</p>
-        <p>• Use fullscreen button for best experience.</p>
+      <div class="instructions-list">
+        <p>Click and drag to look around.</p>
+        <p>Scroll to zoom in/out.</p>
+        <p>Use fullscreen button for best experience.</p>
       </div>
-
-      <div style="height:16px;"></div>
-
+      <div style="height:12px;"></div>
       <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
     </div>
   </div>
 </div>
 
-<!-- Tooltip preview -->
-<div id="tooltip-preview" role="tooltip" aria-hidden="true">
-  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
-  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
+<!-- Tooltip for linktree -->
+<div id="tooltip-preview">
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
+  <p><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></p>
 </div>
 
-<!-- Manhattan Beach panel -->
+<!-- Hotspot panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
-<!-- 360 video panel -->
+<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
-<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
-<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
-<!-- YouTube overlay -->
+<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
@@ -215,7 +160,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#00
   </div>
 </div>
 
-<!-- QR overlay -->
+<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -225,7 +170,6 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#00
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
-// Initialize panorama
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
 const viewer = pannellum.viewer('panorama', {
   type: 'equirectangular',
@@ -237,7 +181,7 @@ const viewer = pannellum.viewer('panorama', {
   compass: false
 });
 
-// Element refs
+// ELEMENT REFERENCES
 const overlay = document.getElementById('overlay');
 const overlayContent = document.getElementById('overlay-content');
 const hotspotPanel = document.getElementById('hotspot-panel');
@@ -253,8 +197,13 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-// Overlay dismiss (except "here" link)
-overlay.addEventListener('click', (ev)=>{
+// LICENSE LOAD
+fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no'))
+  .then(text => licenseBar.textContent = text)
+  .catch(()=> licenseBar.textContent = 'LICENSE file not found.');
+
+// INTRO OVERLAY DISMISS
+overlay.addEventListener('click', (ev) => {
   if(ev.target.closest && ev.target.closest('#preview-link')) return;
   overlay.setAttribute('aria-hidden','true');
   overlay.style.display='none';
@@ -262,29 +211,30 @@ overlay.addEventListener('click', (ev)=>{
   videoLinkPanel.style.display='block';
 });
 
-// Tooltip hover
-function showTooltip() {
-  tooltip.style.display = 'block';
-  tooltip.setAttribute('aria-hidden','false');
+// LINKTREE TOOLTIP
+function updateTooltipPosition(){
   const rect = previewLink.getBoundingClientRect();
-  const ttWidth = tooltip.offsetWidth;
-  const ttHeight = tooltip.offsetHeight;
-  let top = rect.top - ttHeight - 10;
-  let left = rect.left + rect.width/2 - ttWidth/2;
-  if(top < 8) top = rect.bottom + 10;
+  const ttW = tooltip.offsetWidth;
+  const ttH = tooltip.offsetHeight;
+  let left = rect.left + rect.width/2 - ttW/2;
+  let top = rect.top - ttH - 10;
+  if(top<8) top = rect.bottom + 10;
   if(left<8) left=8;
-  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
+  if(left+ttW>window.innerWidth-8) left = window.innerWidth-ttW-8;
   tooltip.style.left = Math.round(left)+'px';
   tooltip.style.top = Math.round(top)+'px';
 }
-previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=>{ if(!tooltip.matches(':hover')) {tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true');}});
-tooltip.addEventListener('mouseenter', showTooltip);
-tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click',(e)=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener');});
-tooltipLink.addEventListener('click',(e)=>{ e.stopPropagation(); });
 
-// 360 video panel
+previewLink.addEventListener('mouseenter', () => { tooltip.style.display='block'; updateTooltipPosition(); });
+previewLink.addEventListener('mousemove', updateTooltipPosition);
+previewLink.addEventListener('mouseleave', () => { tooltip.style.display='none'; });
+tooltip.addEventListener('mouseenter', updateTooltipPosition);
+tooltip.addEventListener('mouseleave', ()=>tooltip.style.display='none');
+
+previewLink.addEventListener('click',(e)=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+tooltipLink.addEventListener('click', (e)=>e.stopPropagation());
+
+// 360 VIDEO PANEL
 videoLinkPanel.addEventListener('click',(e)=>{
   e.stopPropagation();
   youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
@@ -293,10 +243,10 @@ videoLinkPanel.addEventListener('click',(e)=>{
 });
 youtubeOverlay.addEventListener('click', ()=>{
   youtubeOverlay.style.opacity=0;
-  setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);
+  setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);
 });
 
-// QR overlay
+// QR BUTTON
 qrBtn.addEventListener('click',(e)=>{
   e.stopPropagation();
   qrOverlay.style.display='flex';
@@ -304,12 +254,17 @@ qrBtn.addEventListener('click',(e)=>{
 });
 qrOverlay.addEventListener('click', ()=>{
   qrOverlay.style.opacity=0;
-  setTimeout(()=> qrOverlay.style.display='none',300);
+  setTimeout(()=> qrOverlay.style.display='none',280);
 });
-qrContent.addEventListener('click',(e)=>{ e.stopPropagation(); qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300);});
+qrContent.addEventListener('click', (e)=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280); e.stopPropagation(); });
 
-// LICENSE
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>{licenseBar.textContent=text;}).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+// ESC HANDLER
+document.addEventListener('keydown', (e)=>{
+  if(e.key==='Escape'){
+    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+    if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
+  }
+});
 </script>
 </body>
 </html>
